--- a/template/index.html
+++ b/template/index.html
@@ -1,11 +1,25 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Template --- wiku30's blog</title>
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta charset = "utf-8">
+<title>Template --- wiku30's Blog</title>
 </head>
 
 <body bgcolor="lavender">
+
+<p align="center"><b><i><font face="Calibri Light" size="6">Template</font></i></b>
+
+
+
+
+<p align="right"><font face="Calibri Light" style="font-size: 15pt">  
+<span lang="en-us">
+<a href="/index.html"><font color="#0080FF">Back to Homepage</font></a></span></font></p>
+
+	<p align="left"><span lang="en-us">
+	<font face="Calibri Light" style="font-size: 15pt">&nbsp;&nbsp;&nbsp; To be constructed...</font></span></p>
+
 
 
 
